--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="icon.png" />
 
 		<!-- EDIT: title -->
-    <title>Hassan's Resume</title>
+    <title>rhanimi's resume</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -59,7 +59,8 @@
 				</div>
 				<div class="col-lg-6">
 					<!-- EDIT: about -->
-					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist. My love for math and data makes it very easy to handle it, understanding it and use it through models to extract insights and make help in decision making.
+					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist. My love for math and data makes it very easy to handle it, understanding it and use it through models to extract insights, communicate them and help in decision making.
+
 					I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
 				</div>
 				<div class="col-lg-3">
@@ -89,10 +90,9 @@
 				</div>
 				<div class="col-lg-3">
 					<p><sm>Sept. 2017</sm><br/>
-					<!--<imp><sm>IN PROGRESS</sm></imp>
-					</p>
+					<!--<imp><sm>IN PROGRESS</sm></imp></p>-->
 				</div>
-	
+
 				<!-- EDIT: education line 2 -->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Master & engineer degrees in Industrial Engineering</t><br/>
@@ -103,7 +103,6 @@
 				<div class="col-lg-3">
 					<p><sm>Sept. 2016</sm></p>
 				</div>
-	
 		</div><!--/.row -->
 		<br>
 		<hr>
@@ -119,12 +118,15 @@
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-6">
 					<p class="tight"><t>Industrial engineer </t><br/>
-						Aptar-Pharma <br/>
-					</p>
+						Aptar-Pharma <br/></p>
 					<p><more>- Monitoring of the development of a new valve
+
 						- Data analysis (measurement and release tests)
+
 						- Technical support to capacity increase
+
 						- Resolution of manufacturing plant issues
+
 						- Management of the switch to 3D measurement methods</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -138,7 +140,9 @@
 						CEA <br/>
 					</p>
 					<p><more>- Modeling of the austenitic stainless steel behavior
+
 						- Specific tests on specimens cutted from the structure
+
 						- Data wrangling and identification of the model parameters</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -147,12 +151,14 @@
 				</div>
 
 								<!-- EDIT: work line 3 -->
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>Junior project manager </t><br/>
 						Renault<br/>
 					</p>
 					<p><more>- Integration of Additive Manufacturing processes to manufacture functional prototypes
+
 						- Manage suppliers on the manufacturing of samples
+
 						- Design & development of a «Decision support system for the choice of the AM process» with VBA</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -228,10 +234,10 @@
 					<p>
 						<!-- EDIT: Social Links. Replace # with your URL for each -->
 						<a href="https://github.com/hassanrhanimi" target="_blank"><i class="icon-github"></i></a>
-						<a href="#" target="_blank"><i class="icon-twitter"></i></a>
-						<!-- <a href="#" target="_blank"><i class="icon-facebook"></i></a> -->
 						<a href="www.linkedin.com/in/hassan-rhanimi-a5b78880" target="_blank"><i class="icon-linkedin"></i></a>
-						<!--<a href="#" target="_blank"><i class="icon-github"></i></a>-->
+						<a href="https://twitter.com/rhanimi" target="_blank"><i class="icon-twitter"></i></a>
+						<!-- <a href="#" target="_blank"><i class="icon-facebook"></i></a> -->
+						<!--<a href="#" target="_blank"><i class="icon-dribbble"></i></a>-->
 					</p>
 				</div>
 			</div><!--/.row -->
