--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 				</div>
 				<div class="col-lg-6">
 					<!-- EDIT: about -->
-					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist. My love for math and data makes it very easy to handle it, understanding it and use it through models to extract insights, communicate them and help in decision making.
-
-					I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
+					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist.<br>My love for math and data makes it very easy to handle it, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
@@ -119,14 +117,10 @@
 				<div class="col-lg-6">
 					<p class="tight"><t>Industrial engineer </t><br/>
 						Aptar-Pharma <br/></p>
-					<p><more>- Monitoring of the development of a new valve
-
-						- Data analysis (measurement and release tests)
-
-						- Technical support to capacity increase
-
-						- Resolution of manufacturing plant issues
-
+					<p><more>- Monitoring of the development of a new valve<br> 
+						- Data analysis (measurement and release tests data)<br> 
+						- Technical support to capacity increase (new molds)<br> 
+						- Resolution of manufacturing plant issues<br> 
 						- Management of the switch to 3D measurement methods</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -139,10 +133,8 @@
 					<p class="tight"><t>Mechanical engineer</t><br/>
 						CEA <br/>
 					</p>
-					<p><more>- Modeling of the austenitic stainless steel behavior
-
-						- Specific tests on specimens cutted from the structure
-
+					<p><more>- Modeling of the austenitic stainless steel behavior<br> 
+						- Specific tests on specimens cutted from the structure<br> 
 						- Data wrangling and identification of the model parameters</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -155,10 +147,8 @@
 					<p class="tight"><t>Junior project manager </t><br/>
 						Renault<br/>
 					</p>
-					<p><more>- Integration of Additive Manufacturing processes to manufacture functional prototypes
-
-						- Manage suppliers on the manufacturing of samples
-
+					<p><more>- Integration of Additive Manufacturing processes to manufacture functional prototypes<br> 
+						- Manage suppliers on the manufacturing of samples<br> 
 						- Design & development of a «Decision support system for the choice of the AM process» with VBA</more></p>
 				</div>
 				<div class="col-lg-3">
@@ -171,34 +161,54 @@
 	</div><!--/.container -->
 
 
-	<!-- AWARDS SECTION -->
+	<!-- CERTIFICATES SECTION -->
 	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>AWARDS</h5>
+					<h5>DATA SCIENCE CERTIFICATES</h5>
 				</div>
 
 				<!-- EDIT: awards line 1-->
 				<div class="col-lg-6">
-					<p><t>Best Smile Award</t><br/>
-						Award-giving organization<br/>
+					<p><t>Learn SQL Basics for Data Science</t><br/>
+						University of Califorina, Davis - Coursera<br/>
 					</p>
+					<p><more>- SQL for Data Science
+						- Data Wrangling, Analysis and AB Testing,
+						- Distributed Computing with Spark SQL,
+						- Capstone Project:"Olympic games data analysis"</more></p>
 				</div>
-				<div class="col-lg-3">
+				<!-- <div class="col-lg-3">
 					<p><sm>NOVEMBER 2013</sm></p>
-				</div>
+				</div> -->
 	
 				<!-- EDIT: awards line 2-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Another award</t><br/>
-						Awards Site
+					<p class="tight"><t>Applied data science with python</t><br/>
+						Michigan University - Coursera
 					</p>
-					<p><more>This award has a description. You won it eating pie. Or probably doing something more job-related. Maybe you won't even keep this section - you'll replace it with Skills or something else!</more></p>
+					<p><more>- Introduction to Data Science in python,
+					  - Applied plotting, charting & data representation in python,
+					  - Applied machine learning in python, 
+					  - Applied text mining in python,
+					  - social network analysis in python</more></p>
 				</div>
-				<div class="col-lg-3">
+				<!-- <div class="col-lg-3">
 					<p><sm>2013</sm></p>
+				</div> -->
+
+				<!-- EDIT: awards line 2-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p class="tight"><t>Machine learning</t><br/>
+						Stanford University - Coursera
+					</p>
+					<p><more>- Supervised learning,
+					  - Unsupervised learning,
+					  - Best practices in ML (bias/variance, Evaluation)</more></p>
 				</div>
-		
+				<!-- <div class="col-lg-3">
+					<p><sm>2013</sm></p>
+				</div> -->
 		</div><!--/.row -->
 		<br>
 	</div><!--/.container -->
