--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
-					<p><a href="my-resume.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
+					<p><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -170,11 +170,11 @@
 
 				<!-- EDIT: awards line 1-->
 				<div class="col-lg-6">
-					<p><t>Learn SQL Basics for Data Science</t><br/>
+					<p><t>Learn SQL Basics for Data Science specialization</t><br/>
 						University of Califorina, Davis - Coursera<br/>
 					</p>
 					<p><more>- SQL for Data Science
-						- Data Wrangling, Analysis and AB Testing,
+						- Data Wrangling, Analysis and AB Testingwith SQL,
 						- Distributed Computing with Spark SQL,
 						- Capstone Project:"Olympic games data analysis"</more></p>
 				</div>
@@ -184,13 +184,13 @@
 	
 				<!-- EDIT: awards line 2-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Applied data science with python</t><br/>
+					<p class="tight"><t>Applied data science with python specialization</t><br/>
 						Michigan University - Coursera
 					</p>
-					<p><more>- Introduction to Data Science in python,
-					  - Applied plotting, charting & data representation in python,
-					  - Applied machine learning in python, 
-					  - Applied text mining in python,
+					<p><more>- Introduction to Data Science in python<br> 
+					  - Applied plotting, charting & data representation in python<br> 
+					  - Applied machine learning in python<br> 
+					  - Applied text mining in python<br> 
 					  - social network analysis in python</more></p>
 				</div>
 				<!-- <div class="col-lg-3">
@@ -202,8 +202,8 @@
 					<p class="tight"><t>Machine learning</t><br/>
 						Stanford University - Coursera
 					</p>
-					<p><more>- Supervised learning,
-					  - Unsupervised learning,
+					<p><more>- Supervised learning<br> 
+					  - Unsupervised learning<br> 
 					  - Best practices in ML (bias/variance, Evaluation)</more></p>
 				</div>
 				<!-- <div class="col-lg-3">
@@ -244,7 +244,7 @@
 					<p>
 						<!-- EDIT: Social Links. Replace # with your URL for each -->
 						<a href="https://github.com/hassanrhanimi" target="_blank"><i class="icon-github"></i></a>
-						<a href="www.linkedin.com/in/hassan-rhanimi-a5b78880" target="_blank"><i class="icon-linkedin"></i></a>
+						<a href="https://linkedin.com/in/hassan-rhanimi-a5b78880" target="_blank"><i class="icon-linkedin"></i></a>
 						<a href="https://twitter.com/rhanimi" target="_blank"><i class="icon-twitter"></i></a>
 						<!-- <a href="#" target="_blank"><i class="icon-facebook"></i></a> -->
 						<!--<a href="#" target="_blank"><i class="icon-dribbble"></i></a>-->
