--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 				<div class="col-lg-6">
 					<!-- EDIT: about -->
-					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist.<br>My love for math and data makes it very easy to handle it, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
+					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist.<br>My love for coding, math and data makes it very easy to handle data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
@@ -173,9 +173,9 @@
 					<p><t>Learn SQL Basics for Data Science specialization</t><br/>
 						University of Califorina, Davis - Coursera<br/>
 					</p>
-					<p><more>- SQL for Data Science
-						- Data Wrangling, Analysis and AB Testingwith SQL,
-						- Distributed Computing with Spark SQL,
+					<p><more>- SQL for Data Science<br> 
+						- Data Wrangling, Analysis and AB Testingwith SQL<br> 
+						- Distributed Computing with Spark SQL<br> 
 						- Capstone Project:"Olympic games data analysis"</more></p>
 				</div>
 				<!-- <div class="col-lg-3">
@@ -230,8 +230,8 @@
 					</p>
 					<!-- EDIT: address -->
 					<p><t>Address</t><br/>
-						123 Some St. <br/>
-						Guyancourt <br/>
+						<!-- 123 Some St. <br/> -->
+						Guyancourt - 78280 <br/>
 						France<br/>
 					</p>
 					<!-- EDIT: phone number -->
