--- a/index.html
+++ b/index.html
@@ -38,12 +38,22 @@
 	<div id="header" class="header">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-12">
+				<div class="col-lg-8">
 					<!-- EDIT: name -->
 					<h1>Hassan RHANIMI</h1>
 					<!-- EDIT: title | email -->
-					<h3>Junior data scientist | <a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>
+					<h2>Junior data scientist |</h2> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>					
 				</div><!--/.col-lg-12 -->
+				<div class="col-lg-4 ">
+					<img src="icone/moi.png" height="250px" width="200px"/>
+				</div>
+
+<!-- 
+				<p class="aligncenter">
+    <img src="image.jpg" alt="centered image" />
+</p>
+ -->
+
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/.header -->
@@ -54,10 +64,10 @@
 		<div class="container">
 			<div class="row">
 				
-				<div class="col-lg-2 col-lg-offset-1">
+				<div class="col-lg-2 col-lg-offset-0">
 					<h5>ABOUT</h5>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-7">
 					<!-- EDIT: about -->
 					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist.<br>My love for coding, math and data makes it very easy to handle data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
 				</div>
@@ -72,51 +82,76 @@
 
 
 	<section id="resume" name="resume"></section>
-	<!-- EDUCATION SECTION -->
+
+	<!-- CERTIFICATES SECTION -->
 	<div class="container desc">
 		<div class="row">
-
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>EDUCATION</h5>
-				</div>
-				<!-- EDIT: education line 1 -->
-				<div class="col-lg-6">
-					<p><t>M. Sc. in Mechanical engineering</t><br/>
-								Mines ParisTech, Paris - France
-						<!--<br/><i>Extra info here</i>-->
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>Sept. 2017</sm><br/>
-					<!--<imp><sm>IN PROGRESS</sm></imp></p>-->
+				<div class="col-lg-2 col-lg-offset-0">
+					<h5>DATA SCIENCE CERTIFICATES</h5>					
 				</div>
 
-				<!-- EDIT: education line 2 -->
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Master & engineer degrees in Industrial Engineering</t><br/>
-						 ENSAM in Metz (France) & Meknes (Morocco)
-						<!--<br/><i>Extra info here</i>-->
-					</p>
+				<!-- EDIT: line 1-->
+				<div class="col-lg-5">
+					<p><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/> Learn SQL Basics for Data Science specialization</t><br/>
+						University of Califorina, Davis - Coursera<br/>
+						Credential ID 5WGYX75KR96Q
+					<!-- </p> -->
+					<p><more>- SQL for Data Science<br> 
+						- Data Wrangling, Analysis and AB Testingwith SQL<br> 
+						- Distributed Computing with Spark SQL<br> 
+						- Capstone Project:"Olympic games data analysis"<!-- </more></p> --><br> 
+				<a href="https://www.coursera.org/account/accomplishments/specialization/certificate/5WGYX75KR96Q" target="_blank">See credential</a>
 				</div>
-				<div class="col-lg-3">
-					<p><sm>Sept. 2016</sm></p>
+
+				<div class="col-lg-5">
+					<p class="tight"><t><img src="icone/stanford.png" height="50px" width="50px"/> Machine learning</t><br/>
+						Stanford University - Coursera<br> 
+						Credential ID B6H2QETYY3S5
+					<!-- </p> -->
+					<p><more>- Supervised learning<br> 
+					  - Unsupervised learning<br> 
+					  - Best practices in ML (bias/variance, Evaluation)<!-- </more></p> --><br> 
+				<a href="https://www.coursera.org/account/accomplishments/certificate/B6H2QETYY3S5" target="_blank">See credential</a>
 				</div>
+
+	
+				<!-- EDIT: line 2-->
+				<div class="col-lg-5 col-lg-offset-2">
+					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/> Applied data science with python specialization</t><br/>
+						Michigan University - Coursera<br> 
+						Credential ID MJSX57B8D6V8
+					<!-- </p> -->
+					<p><more>- Introduction to Data Science in python<br> 
+					  - Applied plotting, charting & data representation in python<br> 
+					  - Applied machine learning in python<br> 
+					  - Applied text mining in python<br> 
+					  - social network analysis in python<!-- </more></p> --><br> 
+				<a href="https://www.coursera.org/account/accomplishments/specialization/certificate/MJSX57B8D6V8" target="_blank">See credential</a>
+				</div>
+
+				<div class="col-lg-5">
+					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/> Complete Python Mastery</t><br/>
+						MOSH Coding Simple<br>
+						Credential ID cert_zkkvh81v<br/>
+					<a href="https://codewithmosh.com/p/python-programming-course-beginners" target="_blank">See credential</a>
+				</div>				
 		</div><!--/.row -->
-		<br>
+		<!-- <br> -->
 		<hr>
 	</div><!--/.container -->
+
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
 	
 	<!-- WORK SECTION -->
 	<div class="container desc">
 		<div class="row">
-
-				<div class="col-lg-2 col-lg-offset-1">
+				<div class="col-lg-2 col-lg-offset-0">
 					<h5>WORK</h5>
 				</div>
 				<!-- EDIT: work line 1 -->
-				<div class="col-lg-6">
+				<div class="col-lg-7">
 					<p class="tight"><t>Industrial engineer </t><br/>
-						Aptar-Pharma <br/></p>
+						<img src="icone/aptar.png" height="50px" width="60px"/> Aptar-Pharma</p>
 					<p><more>- Monitoring of the development of a new valve<br> 
 						- Data analysis (measurement and release tests data)<br> 
 						- Technical support to capacity increase (new molds)<br> 
@@ -125,13 +160,14 @@
 				</div>
 				<div class="col-lg-3">
 					<p><sm>Jul 2018 - Aug 2020 <br />
-					 Val-de-reuil - France</sm></p>
+					 Val-de-reuil - France</sm><br />
+					 <!-- <img src="icone/aptar.png" height="70px" width="100px"/> -->
 				</div>
 				
 				<!-- EDIT: work line 2-->
-				<div class="col-lg-6 col-lg-offset-3">
+				<div class="col-lg-7 col-lg-offset-2">
 					<p class="tight"><t>Mechanical engineer</t><br/>
-						CEA <br/>
+						<img src="icone/CEA.png" height="40px" width="50px"/> CEA <br/>
 					</p>
 					<p><more>- Modeling of the austenitic stainless steel behavior<br> 
 						- Specific tests on specimens cutted from the structure<br> 
@@ -139,80 +175,89 @@
 				</div>
 				<div class="col-lg-3">
 					<p><sm>Mar 2017 - Sep 2017 <br />
-					Cadarache - France</sm></p>
+					Cadarache - France</sm><br/>
+					<!-- <img src="icone/CEA.png" height="70px" width="100px"/> -->
 				</div>
 
 								<!-- EDIT: work line 3 -->
-				<div class="col-lg-6 col-lg-offset-3">
+				<div class="col-lg-7 col-lg-offset-2">
 					<p class="tight"><t>Junior project manager </t><br/>
-						Renault<br/>
+						 <img src="icone/renault.png" height="40px" width="50px"/> Renault<br/>
 					</p>
 					<p><more>- Integration of Additive Manufacturing processes to manufacture functional prototypes<br> 
 						- Manage suppliers on the manufacturing of samples<br> 
 						- Design & development of a «Decision support system for the choice of the AM process» with VBA</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>Mar 2016 - Sep 2016 <br />
-					 Guyancourt - France</sm></p>
+					<p><sm>Mar 2016 - Sep 2016 <br/>
+					 Guyancourt - France</sm>
+					 <!-- <img src="icone/renault.png" height="70px" width="100px"/> -->
 				</div>
 		</div><!--/.row -->
-		<br>
+		<!-- <br> -->
 		<hr>
 	</div><!--/.container -->
 
-
-	<!-- CERTIFICATES SECTION -->
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
+	<!-- EDUCATION SECTION -->
 	<div class="container desc">
-		<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>DATA SCIENCE CERTIFICATES</h5>
-				</div>
+			<div class="row">
+			<div class="col-lg-2 col-lg-offset-0">
+					<h5>EDUCATION</h5><br>
+					</div>
 
-				<!-- EDIT: awards line 1-->
-				<div class="col-lg-6">
-					<p><t>Learn SQL Basics for Data Science specialization</t><br/>
-						University of Califorina, Davis - Coursera<br/>
-					</p>
-					<p><more>- SQL for Data Science<br> 
-						- Data Wrangling, Analysis and AB Testingwith SQL<br> 
-						- Distributed Computing with Spark SQL<br> 
-						- Capstone Project:"Olympic games data analysis"</more></p>
-				</div>
-				<!-- <div class="col-lg-3">
-					<p><sm>NOVEMBER 2013</sm></p>
+		<!-- <div class="row"> -->
+				<!-- EDIT: education line 1 -->
+<!-- 				<div class="col-lg-2 col-lg-offset-1">
+					<img src="icone/mines.png" height="50px" width="70px"/>
 				</div> -->
-	
-				<!-- EDIT: awards line 2-->
-				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Applied data science with python specialization</t><br/>
-						Michigan University - Coursera
-					</p>
-					<p><more>- Introduction to Data Science in python<br> 
-					  - Applied plotting, charting & data representation in python<br> 
-					  - Applied machine learning in python<br> 
-					  - Applied text mining in python<br> 
-					  - social network analysis in python</more></p>
+				<div class="col-lg-7">
+					<p><t>M. Sc. : "Materials & Structures Design"</t><br>
+								<img src="icone/mines.png" height="50px" width="50px"/> Mines ParisTech</p>
 				</div>
-				<!-- <div class="col-lg-3">
-					<p><sm>2013</sm></p>
-				</div> -->
+				<div class="col-lg-3">
+					<p><sm>Sept. 2017
+					<br/>Paris - France</sm>
+					<!-- <br/><imp><sm>IN PROGRESS</sm></imp></p> -->
+				</div>
+		<!-- </div> -->
 
-				<!-- EDIT: awards line 2-->
-				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Machine learning</t><br/>
-						Stanford University - Coursera
-					</p>
-					<p><more>- Supervised learning<br> 
-					  - Unsupervised learning<br> 
-					  - Best practices in ML (bias/variance, Evaluation)</more></p>
-				</div>
-				<!-- <div class="col-lg-3">
-					<p><sm>2013</sm></p>
+		<!-- <div class="row"> -->
+				<!-- EDIT: education line 2 -->
+<!-- 				<div class="col-lg-2 col-lg-offset-1">
+					<img src="icone/ensamf.png" height="50px" width="70px"/>
 				</div> -->
-		</div><!--/.row -->
-		<br>
+				<div class="col-lg-7 col-lg-offset-2 ">
+					<p><t>Master in Industrial Engineering</t><br/>
+								"Knowledge Integration in Mechanical production"<br>
+						 		<img src="icone/ensamf.png" height="50px" width="50px"/> National Arts & Crafts Engineering School, ENSAM</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2015/2016
+					<br/>Metz - France</sm></p>					
+				</div>
+		<!-- </div> -->
+
+		<!-- <div class="row"> -->
+				<!-- EDIT: education line 3 -->
+<!-- 				<div class="col-lg-2 col-lg-offset-1">
+					<img src="icone/ensamm.jpg" height="50px" width="70px"/>
+				</div> -->
+				<div class="col-lg-7 col-lg-offset-2 ">
+					<p><t>Engineer degree in electromechanical Engineering</t><br/>
+						 		<img src="icone/ensamm.png" height="50px" width="50px"/> National Arts & Crafts Engineering School, ENSAM</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2013/2016
+					<br/>Meknes - Morocco</sm></p>		
+				</div>
+		<!-- </div> -->
+		</div> <!-- /.row -->
+		<!-- <br>  -->
+		<!-- <hr> -->
 	</div><!--/.container -->
-	
+
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
 
 	<section id="contact" name="contact"></section>
 	<!--FOOTER DESCRIPTION -->
