--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 		<!-- EDIT: title -->
     <title>rhanimi's resume</title>
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -42,38 +41,33 @@
 					<!-- EDIT: name -->
 					<h1>Hassan RHANIMI</h1>
 					<!-- EDIT: title | email -->
-					<h2>Junior data scientist |</h2> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>					
+					<h2>Junior data scientist</h2> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>			
 				</div><!--/.col-lg-12 -->
 				<div class="col-lg-4 ">
 					<img src="icone/moi.png" height="250px" width="200px"/>
 				</div>
-
-<!-- 
-				<p class="aligncenter">
-    <img src="image.jpg" alt="centered image" />
-</p>
- -->
-
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/.header -->
 	
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
 
 	<section id="about" name="about"></section>
 	<div class="about">
 		<div class="container">
 			<div class="row">
 				
-				<div class="col-lg-2 col-lg-offset-0">
+				<div class="col-lg-1 col-lg-offset-0">
 					<h5>ABOUT</h5>
 				</div>
-				<div class="col-lg-7">
+				<div class="col-lg-9">
 					<!-- EDIT: about -->
-					<p>From an engineering background, I took a lot of online courses & training on machine learning & data science so i can persue my carer as a data scientist.<br>My love for coding, math and data makes it very easy to handle data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>I master important machine learning algorithms theory and above all, I do really know where and how to  quickly search information or acquire needed skills.</p>
+					<p>I am a junior data scientist with an engineering background. I'm passionate about coding, math and data. I am very confortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.
+					<br>I master important machine learning algorithms theory and above all, I learn easily and know where and how to quickly search information or acquire new needed skills.</p>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-2">
 					<!-- EDIT: download link -->
-					<p><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
+					<p><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i> <sm>RESUME PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -82,6 +76,48 @@
 
 
 	<section id="resume" name="resume"></section>
+
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
+
+<!-- Skills SECTION -->
+	<div class="container desc">
+		<div class="row">
+				<div class="col-lg-2 col-lg-offset-0">
+					<h5>SKILLS</h5>					
+				</div>
+
+<!-- <style>
+	table, th, td { border:1px solid black; }
+	td.description { vertical-align: top; }
+</style> -->
+
+
+<table style="width:80%">
+	  <tr>
+	    <th>Data science</th>
+	    <th>Languages & tools</th>
+	    <th>Others</th>
+	  </tr>
+	  <tr>
+	    <td>Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics</td>
+	    <td style="vertical-align: top;">Python<br>Matlab<br>SQL<br>Numpy, Scipy,matplotlib, Scikit-learn<br>Linux<br>Git</td>
+	    <td style="vertical-align: top;">Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables</td>
+	  </tr>
+<!-- 	  <tr>
+	    <td>16</td>
+	    <td>14</td>
+	    <td>10</td>
+	  </tr> -->
+</table>
+
+<!-- <p>To undestand the example better, we have added borders to the table.</p> -->
+
+		</div><!--/.row -->
+		<br>
+		<hr>
+	</div><!--/.container -->
+
+<!-- --------------------------------------------------------------------------------------------------------------------- -->
 
 	<!-- CERTIFICATES SECTION -->
 	<div class="container desc">
@@ -97,9 +133,9 @@
 						Credential ID 5WGYX75KR96Q
 					<!-- </p> -->
 					<p><more>- SQL for Data Science<br> 
-						- Data Wrangling, Analysis and AB Testingwith SQL<br> 
+						- Data Wrangling, Analysis and AB Testing with SQL<br> 
 						- Distributed Computing with Spark SQL<br> 
-						- Capstone Project:"Olympic games data analysis"<!-- </more></p> --><br> 
+						- Capstone Project : "Olympic games data analysis"<!-- </more></p> --><br> 
 				<a href="https://www.coursera.org/account/accomplishments/specialization/certificate/5WGYX75KR96Q" target="_blank">See credential</a>
 				</div>
 
@@ -125,7 +161,7 @@
 					  - Applied plotting, charting & data representation in python<br> 
 					  - Applied machine learning in python<br> 
 					  - Applied text mining in python<br> 
-					  - social network analysis in python<!-- </more></p> --><br> 
+					  - Social network analysis in python<!-- </more></p> --><br> 
 				<a href="https://www.coursera.org/account/accomplishments/specialization/certificate/MJSX57B8D6V8" target="_blank">See credential</a>
 				</div>
 
