--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
 	table, th, td { border:1px solid black; }
 	td.description { vertical-align: top; }
 </style> -->
-
-
-<table style="width:80%">
+<!-- <table style="width:80%">
 	  <tr>
 	    <th>Data science</th>
 	    <th>Languages & tools</th>
@@ -103,15 +101,26 @@
 	    <td style="vertical-align: top;">Python<br>Matlab<br>SQL<br>Numpy, Scipy,matplotlib, Scikit-learn<br>Linux<br>Git</td>
 	    <td style="vertical-align: top;">Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables</td>
 	  </tr>
-<!-- 	  <tr>
-	    <td>16</td>
-	    <td>14</td>
-	    <td>10</td>
-	  </tr> -->
-</table>
+</table> -->
 
-<!-- <p>To undestand the example better, we have added borders to the table.</p> -->
 
+				<!-- EDIT: line 1-->
+				<div class="col-md-3">
+					<p><t>Data science</t></p>
+					Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics
+				</div>
+
+				<!-- EDIT: line 1-->
+				<div class="col-md-3 ">
+					<p><t>Languages & tools</t></p>
+					Python<br>Matlab<br>SQL<br>Numpy, Scipy, matplotlib<br>Scikit-learn<br>Linux<br>Git
+				</div>
+
+				<!-- EDIT: line 1-->
+				<div class="col-md-3">
+					<p><t>Others</t></p>
+					Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables
+				</div>
 		</div><!--/.row -->
 		<br>
 		<hr>
