--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="icon.png" />
 
 		<!-- EDIT: title -->
-    <title>rhanimi's resume</title>
+    <title>Hassan's resume</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -30,6 +30,23 @@
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
+  
+    <style>
+		div.a {
+		  text-align: center;
+		}
+
+		div.b {
+		  text-align: left;
+		}
+
+		div.c {
+		  text-align: right;
+		} 
+
+		div.d {text-align: justify;} 
+		</style>
+
   </head>
 
   <body>
@@ -44,7 +61,7 @@
 					<h2>Junior data scientist</h2> <h3><a href="mailto:YOU@EMAIL.com" target="_blank">rhanimi.hassan@gmail.com</a></h3>			
 				</div><!--/.col-lg-12 -->
 				<div class="col-lg-4 ">
-					<img src="icone/moi.png" height="250px" width="200px"/>
+					<img src="icone/HassanRHANIMI.png" height="250px" width="200px"/>
 				</div>
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -60,10 +77,10 @@
 				<div class="col-lg-1 col-lg-offset-0">
 					<h5>ABOUT</h5>
 				</div>
-				<div class="col-lg-9">
+				<div class="col-lg-9 d">
 					<!-- EDIT: about -->
-					<p>I am a junior data scientist with an engineering background. I'm passionate about coding, math and data. I am very confortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.
-					<br>I master important machine learning algorithms theory and above all, I learn easily and know where and how to quickly search information or acquire new needed skills.</p>
+					<p>I am a junior data scientist with an engineering background. I'm passionate about coding, math and data. I am very comfortable with handling data, understanding it and use it through models to extract insights, communicate them and help in decision making.<br>
+					I master important machine learning algorithms theory/application and above all, I learn easily and know where and how to quickly search for information or acquire new needed skills.</p>
 				</div>
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
@@ -85,7 +102,6 @@
 				<div class="col-lg-2 col-lg-offset-0">
 					<h5>SKILLS</h5>					
 				</div>
-
 <!-- <style>
 	table, th, td { border:1px solid black; }
 	td.description { vertical-align: top; }
@@ -102,24 +118,22 @@
 	    <td style="vertical-align: top;">Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables</td>
 	  </tr>
 </table> -->
-
-
 				<!-- EDIT: line 1-->
 				<div class="col-md-3">
-					<p><t>Data science</t></p>
-					Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics
+					<t>Data science</t></br>
+						Exploratory analysis<br>Data wrangling<br>Data visualization<br>Supervised learning<br>Unsupervised learning<br>NLP<br>Statistics
 				</div>
 
 				<!-- EDIT: line 1-->
 				<div class="col-md-3 ">
-					<p><t>Languages & tools</t></p>
-					Python<br>Matlab<br>SQL<br>Numpy, Scipy, matplotlib<br>Scikit-learn<br>Linux<br>Git
+					<t>Languages & tools</t></br>
+						Python<br>Matlab<br>SQL<br>Numpy, Scipy, Matplotlib<br>Scikit-learn<br>Linux<br>Git
 				</div>
 
 				<!-- EDIT: line 1-->
 				<div class="col-md-3">
-					<p><t>Others</t></p>
-					Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Great deliverables
+					<t>Others</t></br>
+						Project management<br>Need & Specifications understanding<br>Autonomy & trustworthiness<br>Story telling & communication<br>Deliverables of high quality
 				</div>
 		</div><!--/.row -->
 		<br>
@@ -137,9 +151,9 @@
 
 				<!-- EDIT: line 1-->
 				<div class="col-lg-5">
-					<p><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/> Learn SQL Basics for Data Science specialization</t><br/>
+					<p class="tight"><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/> Learn SQL Basics for Data Science specialization</t><br/>
 						University of Califorina, Davis - Coursera<br/>
-						Credential ID 5WGYX75KR96Q
+						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->5WGYX75KR96Q
 					<!-- </p> -->
 					<p><more>- SQL for Data Science<br> 
 						- Data Wrangling, Analysis and AB Testing with SQL<br> 
@@ -151,7 +165,7 @@
 				<div class="col-lg-5">
 					<p class="tight"><t><img src="icone/stanford.png" height="50px" width="50px"/> Machine learning</t><br/>
 						Stanford University - Coursera<br> 
-						Credential ID B6H2QETYY3S5
+						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->B6H2QETYY3S5
 					<!-- </p> -->
 					<p><more>- Supervised learning<br> 
 					  - Unsupervised learning<br> 
@@ -164,7 +178,7 @@
 				<div class="col-lg-5 col-lg-offset-2">
 					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/> Applied data science with python specialization</t><br/>
 						Michigan University - Coursera<br> 
-						Credential ID MJSX57B8D6V8
+						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->MJSX57B8D6V8
 					<!-- </p> -->
 					<p><more>- Introduction to Data Science in python<br> 
 					  - Applied plotting, charting & data representation in python<br> 
@@ -177,9 +191,9 @@
 				<div class="col-lg-5">
 					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/> Complete Python Mastery</t><br/>
 						MOSH Coding Simple<br>
-						Credential ID cert_zkkvh81v<br/>
-					<a href="https://codewithmosh.com/p/python-programming-course-beginners" target="_blank">See credential</a>
-				</div>				
+						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->cert_zkkvh81v</t><br/>
+					<a href="certificatePython.pdf" target="_blank">See credential</a>
+				</div>				<!-- https://codewithmosh.com/p/python-programming-course-beginners -->
 		</div><!--/.row -->
 		<!-- <br> -->
 		<hr>
