--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				</div>
 				<div class="col-lg-2">
 					<!-- EDIT: download link -->
-					<p><a href="hassanRHANIMI_resume.pdf" target="_blank"><i class="icon-download-alt"></i> <sm>RESUME PDF</sm></a></p>
+					<p><a href="hassanRHANIMI_resume.pdf" target="_tab"><i class="icon-download-alt"></i> <sm>RESUME PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -192,7 +192,7 @@
 					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/> Complete Python Mastery</t><br/>
 						MOSH Coding Simple<br>
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->cert_zkkvh81v</t><br/>
-					<a href="certificatePython.pdf" target="_blank">See credential</a>
+					<a href="certificatePython.pdf" target="_tab">See credential</a>
 				</div>				<!-- https://codewithmosh.com/p/python-programming-course-beginners -->
 		</div><!--/.row -->
 		<!-- <br> -->
