--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 				<!-- EDIT: line 1-->
 				<div class="col-lg-5">
-					<p class="tight"><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/> Learn SQL Basics for Data Science specialization</t><br/>
+					<p class="tight"><t><img src="icone/UCDavis.jpeg" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/learn-sql-basics-data-science" target="_blank">Learn SQL Basics for Data Science specialization</a></t><br/>
 						University of Califorina, Davis - Coursera<br/>
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->5WGYX75KR96Q
 					<!-- </p> -->
@@ -163,7 +163,7 @@
 				</div>
 
 				<div class="col-lg-5">
-					<p class="tight"><t><img src="icone/stanford.png" height="50px" width="50px"/> Machine learning</t><br/>
+					<p class="tight"><t><img src="icone/stanford.png" height="50px" width="50px"/><a href="https://www.coursera.org/learn/machine-learning" target="_blank">Machine learning</a></t><br/>
 						Stanford University - Coursera<br> 
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->B6H2QETYY3S5
 					<!-- </p> -->
@@ -176,7 +176,7 @@
 	
 				<!-- EDIT: line 2-->
 				<div class="col-lg-5 col-lg-offset-2">
-					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/> Applied data science with python specialization</t><br/>
+					<p class="tight"><t><img src="icone/UMichigan.png" height="50px" width="50px"/><a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied data science with python specialization</a></t><br/>
 						Michigan University - Coursera<br> 
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->MJSX57B8D6V8
 					<!-- </p> -->
@@ -189,11 +189,11 @@
 				</div>
 
 				<div class="col-lg-5">
-					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/> Complete Python Mastery</t><br/>
+					<p class="tight"><t><img src="icone/mosh.png" height="50px" width="50px"/><a href="https://codewithmosh.com/p/python-programming-course-beginners" target="_blank">Complete Python Mastery</a></t><br/>
 						MOSH Coding Simple<br>
 						Credential ID : <!-- <t style="color:rgba(175, 238, 238,1);"> -->cert_zkkvh81v</t><br/>
 					<a href="https://github.com/hassanrhanimi/hassanrhanimi.github.io/blob/master/certificatePython.pdf" target="_blank">See credential</a>
-				</div>				<!-- https://codewithmosh.com/p/python-programming-course-beginners -->
+				</div>
 		</div><!--/.row -->
 		<!-- <br> -->
 		<hr>
